# business-financial-control

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  deps.py  router.py
backend/app/application/: __init__.py
backend/app/application/admin/: overview.py
backend/app/application/advisor/: compute_signals.py  recommend.py
backend/app/application/alerts/: compute.py  use_case.py
backend/app/application/apikey/: manage.py
backend/app/application/appointment/: change_status.py  create_appointment.py  update_appointment.py
backend/app/core/: __init__.py  audit.py  config.py  exceptions.py  logging.py  rate_limit.py  security_headers.py  tenant.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/schemas/: __init__.py  accounts.py  admin.py  advisor.py  alert.py  analytics.py  api_key.py  appointment.py  audit.py  auth.py  blueprint.py  catalog.py  client.py  cnpj.py  company.py  connector.py  dashboard.py  employee.py  error.py  financial.py  goal.py  health.py  income_statement.py  insights.py  notifications.py  recurring.py  subscription.py  user.py
backend/scripts/: create_admin.py  run_scheduled.py
backend/tests/: fakes.py  test_main.py
backend/tests/core/: test_audit.py  test_config.py  test_exceptions.py  test_logging.py  test_security_headers.py  test_tenant.py
backend/tests/infrastructure/: test_mongodb.py
docs/: DEPLOY.md  (+1 more)
(+439 files in other folders)
