[project]
name = "business-financial-control-api"
version = "0.1.0"
description = "API do SaaS de Controle Financeiro Empresarial"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "app"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
